--- a/src/PaceCalculator.Blazor/PaceCalculator.Blazor.csproj
+++ b/src/PaceCalculator.Blazor/PaceCalculator.Blazor.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview3.20168.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
   </ItemGroup>
+  <!-- When publishing, swap service-worker.published.js in place of service-worker.js -->
   <ItemGroup Condition="'$(DesignTimeBuild)' != 'true'">
     <Content Remove="wwwroot\service-worker.js" />
     <Content Update="wwwroot\service-worker.published.js" Link="wwwroot\service-worker.js" />
